Fix misalignment for now

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -700,8 +700,8 @@ div#post-comment-reply-container
 		+text-shadow(1px, 1px, 0, black, .2)
 
 	& .post-submit-field-type-button-description
-		clear: both
-		display: inline-block
+		//clear: both
+		//display: inline-block
 		font-size: 1.1em
 		margin: 0
 		+text-shadow(1px, 1px, 0, black, .1)
